--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,13 @@
-*.sw[opnm]
 .DS_Store
 /.virtualenv
 .ipynb_checkpoints
-*.pyc
-parser/
-/stanford-corenlp-*
-*.db*
-downloads/
-*.model_kwargs
-**/checkpoint
-**/checkpoints/
+
+# Build artifacts
 __pycache__
-*corenlp.log
+earthchem.egg-info
+build
+dist
 
-# Sphinx
-docs/_build
-
-# PyCharm
+# Editor files 
 .idea
-
-# TF models
-*.info
-*.meta
-*.data*
-*.index
-
-# Embedding models
-*.mm
-
-# Tutorial
-tutorials/cdr/data/CDR*.BioC.xml
-tutorials/cdr/data/dicts
-
-tutorials/intro/data/articles-dev.tsv
-tutorials/intro/data/articles-test.tsv
-tutorials/intro/data/articles-train.tsv
-tutorials/intro/data/gold_labels.tsv
-
-tutorials/tables/data/hardware/
+*.sublime-workspace
