Update killfiles with test artifacts
Now ignoring all pytest cruft

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 /.virtualenv
 .ipynb_checkpoints
 
+# Test artifacts
+.pytest_cache
+htmlcov
+.coverage
+
 # Build artifacts
 __pycache__
 earthchem.egg-info
