--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
   - "3.6"
 
 install:
-  - pip install -q numpy cython  # needs to be done first!
+  # Install test requirements seperately
+  - pip install -q pytest pytest-runner pytest-cov coverage
   - python setup.py install
 
 script:
