--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 language: python
 python:
-  - "2.7"
   - "3.5"
   - "3.6"
 
 install:
   # Install test requirements seperately
-  - pip install -q pytest pytest-runner pytest-cov coverage
+  - pip install -q pytest pytest-runner pytest-cov coverage python-coveralls
   - python setup.py install
 
 script:
   - pytest
 
 after_success:
-  - coveralls
+  - COVERALLS_REPO_TOKEN=kQuX1Zr77YwYiNEmRuPUqWPPfjmNTh593 coveralls
