--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - python setup.py install
 
 script:
-  - pytest
+  - python setup.py test
 
 after_success:
   - COVERALLS_REPO_TOKEN=kQuX1Zr77YwYiNEmRuPUqWPPfjmNTh593 coveralls
