Prepping for PyPI deployment

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,6 @@ versionfile_source = earthchem/_version.py
 versionfile_build = earthchem/_version.py
 tag_prefix =
 parentdir_prefix = earthchem-
+
+[metadata]
+description-file = README.md
