--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ install:
   - pip install -q pytest pytest-runner pytest-cov coverage coveralls
   - python setup.py install
 
+before_script: # configure a headless display to test plot generation
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
 script:
   - python setup.py test
 
