--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,4 @@ script:
   - python setup.py test
 
 after_success:
-  # We only want to run coveralls for Python 3.6 so we don't double up...
-  - if [[$ENV == python=3.6* ]]; then
-      coveralls;
-    fi
+  - coveralls
