Switch coveralls -> codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 
 install:
   # Install test requirements seperately
-  - pip install -q pytest pytest-runner pytest-cov coverage coveralls
+  - pip install -q pytest pytest-runner pytest-cov coverage codecov
   - python setup.py install
 
 before_script: # configure a headless display to test plot generation
@@ -20,4 +20,4 @@ script:
   - python setup.py test
 
 after_success:
-  - coveralls
+  - codecov
