--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,8 @@ dependencies:
   - cartopy
   - pyyaml
   - pip:
+    - periodictable
+    - python-ternary
     - versioneer
     - pytest-cov
     - pytest-runner
